crates/aranya-policy-compiler/tests/data/type_errors/return_wrong_type_invalid_type.fail.policy
function f() bool {
    return 0
}
